feat: Add Tailwind CSS configuration

--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,12 @@
   "organizeImports": { "enabled": true },
   "linter": {
     "enabled": true,
-    "rules": { "recommended": false },
+    "rules": {
+      "recommended": false,
+      "nursery": {
+        "useSortedClasses": "warn"
+      }
+    },
     "ignore": ["dist"]
   },
   "javascript": {
