--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "biome": "biome check --write ./src"
+    "biome": "biome check --fix --unsafe ./src"
   },
   "dependencies": {
-    "@million/lint": "^1.0.0",
+    "@million/lint": "^1.0.8",
+    "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
